# bustedParrot

./: .gitignore  bustedParrot.lkshs  bustedParrot.lkshw  disqus1  disqus2  disqus3  fileListToDBhandlingFormat.hs  fileListToNodeNameAndLinkIntoSeparateFiles.hs  gendb_entries.hs  ipfsTrackAuto.sh  ipfs_ls_recursive.hs  neverParrotIPFS.sh  siteUpdateAuto.sh  upload
bustedParrot/: bustedParrot.cabal  bustedParrot.cabal~  cabal.sandbox.config  dbsettings.json  site_key.txt  stack.yaml
bustedParrot/dippers/: dipper_0001.json  dipper_0002_twilight_eats_bagel_storyboard.json  dipper_0003.json  dipper_0004_my_garden.json  dipper_0005.json  dipper_1.json
bustedParrot/htic/: main_nailed_stuff.tpl  neverParrotMain.fodg  neverParrotMain.fodg.json  update_main_nailed_stuff.sh
bustedParrot/nodes/: nodes_1.json  nodes_2.json  nodes_3.json  nodes_4.json  nodes_5.json  nodes_6.json  nodes_7.json  nodes_dipper_update_03092016.json  nodes_main_nailed_stuff.json  nodes_post69.json  nodes_post70.json  nodes_post71.json  nodes_post72.json  nodes_post73.json  nodes_post74.json  nodes_post74thm.json  nodes_post75.json  nodes_post76.json  nodes_post77.json  nodes_post78.json  nodes_post79.json  nodes_post80.json  nodes_post81.json  nodes_post82.json  nodes_post83.json  nodes_post84.json  nodes_twilight_eats_bagel_storyboard.json
bustedParrot/pages/: page_contact_me.html  page_db.html  page_faq.html  page_my_pictures.html  page_post10_luna_and_luna.html  page_test.html
bustedParrot/posts/: draft10  draft_post10_1.html  post1.html  post10.html  post11.html  post12.html  post13.html  post14.html  post15.html  post16.html  post17.html  post18.html  post19.html  post2.html  post20.html  post21.html  post22.html  post23.html  post24.html  post25.html  post26.html  post27.html  post28.html  post29.html  post3.html  post30.html  post31.html  post32.html  post33.html  post34.html  post35.html  post36.html  post37.html  post38.html  post39.html  post4.html  post40.html  post41.html  post42.html  post43.html  (+46 more)
bustedParrot/snaplets/heist/templates/: archive_base.tpl  archive_earliestFirst_arrows_ornament.tpl  archive_latestFirst_arrows_ornament.tpl  archive_posts_.tpl  archive_top.tpl  dipper_base.tpl  dipper_entry_obj.tpl  dipper_individual_page_base.tpl  dipper_individual_page_top.tpl  dipper_pages.tpl  dipper_reference.tpl  dipper_tags.tpl  dipper_top.tpl  individual_dipper_entry_img.tpl  individual_dipper_entry_obj.tpl  individual_dipper_entry_peerTubeEmbed.tpl  individual_dipper_entry_video.tpl  main_base.tpl  main_dipper_entry_img.tpl  main_dipper_entry_obj.tpl  main_nailed_stuff.tpl  main_nailed_stuff.tpl.bak  main_posts_.tpl  main_top.tpl  post_base.tpl  post_bottom.tpl  post_nav_to_parent.tpl  post_top.tpl
bustedParrot/snaplets/heist/templates/archive/: archive_base.tpl  archive_bottom.tpl  archive_posts.tpl  archive_posts_.tpl  archive_top.tpl
bustedParrot/snaplets/heist/templates/dipper/: dipper_base.tpl  dipper_entries.tpl  dipper_entries_.tpl  dipper_entry.tpl  dipper_individual_page_base.tpl  dipper_individual_page_nav.tpl  dipper_individual_page_nav_next.tpl  dipper_individual_page_nav_prev.tpl  dipper_individual_page_no_nav.tpl  dipper_individual_page_top.tpl  dipper_pages.tpl  dipper_post_h.tpl  dipper_posts.tpl  dipper_tags.tpl  dipper_top.tpl  individual_dipper_entry_img.tpl  individual_dipper_entry_obj.tpl
bustedParrot/snaplets/heist/templates/main_page/: main_base.tpl  main_bottom.tpl  main_nailed_stuff.tpl  main_post_h.tpl  main_posts_.tpl  main_top.tpl
bustedParrot/snaplets/heist/templates/post/: post_base.tpl  post_bottom.tpl  post_top.tpl
bustedParrot/src/: Application.hs  InsertLinks.hs  Main.hs  Main.hs~  Nodes.hs  Nodes.hs~  NodesM.hs  Post.hs  Site.hs  Site.hs~  Site_state.hs  Site_state.hs~
bustedParrot/src/handlers/: Archive.hs  Archive.hs~  Dipper.hs  Dipper.hs~  Dipper_common.hs  Dipper_common.hs~  Dipper_entry_splices.hs  Dipper_image.hs  Main_page.hs  Main_page.hs~  Main_page_common.hs  Main_page_common.hs~  Page.hs  Page_common.hs
bustedParrot/static/: contact_me.html  main.css
bustedParrot/static/must_be_together/site_stapelia_logo/: readme.txt
bustedParrot/tags/: doodleJets  drawings  insects  my-garden  pictag  shaman-vs-witcher  test  twilight-eats-a-bagel-storyboard  каракулялёты  мой-сад  раскадровка-твайлайт-ест-бейгл  шаман-против-ведьмака  ярлыки
databaseHandling/: databaseHandling.cabal  databaseHandling.nix  default.nix
databaseHandling/src/: Main.hs
replaceLinksAccordingToMap/: replaceLinksAccordingToMap.cabal
replaceLinksAccordingToMap/src/: Main.hs
