name: bustedParrot
version: 0.1
cabal-version: 1.2
build-type: Simple
license: AllRightsReserved
license-file: license
stability: Experimental
synopsis: Project Synopsis Here
description: Project Description Here
category: Web
author: Author
data-dir: ""
 
flag development
    Description:  Whether to build the server in development (interpreted) mode
    Default: False
 
flag old-base
    Default: False
 
executable bustedParrot
    build-depends: bytestring >=0.9.1 && <0.11, heist >=0.13,
                   MonadCatchIO-transformers >=0.2.1, mtl >=2,
                   snap >=0.13, snap-core >=0.9,
                   snap-server >=0.9, snap-loader-static >=0.9,
                   text >=0.11, time >=1.1,
                   transformers >=0.2, xmlhtml >=0.1, directory -any,
                   filepath -any, aeson -any, JuicyPixels -any, containers -any,
                   parsec -any
     
    if flag(old-base)
        build-depends: base >=4 && <4.4, lens >=3.7.6
        buildable: True
    else
        build-depends: base >=4.4 && <5, lens >=3.7.6
        buildable: True
     
    if flag(development)
        build-depends: snap-loader-dynamic ==0.10.*
        buildable: True
        cpp-options: -DDEVELOPMENT
        ghc-options: -threaded -w
    else
         
        if impl(ghc >=6.12.0)
            buildable: True
            ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans -fno-warn-unused-do-bind
        else
            buildable: True
            ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans
        buildable: True
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src src/handlers
    other-modules: Archive Dipper Dipper_common Dipper_entry_splices
                   InsertLinks Main_page Main_page_common Nodes NodesM Page
                   Page_common Post Site_state
    ghc-options: -fwarn-unused-imports
 