name: bustedParrot
version: 0.1
cabal-version: 1.2
build-type: Simple
license: AllRightsReserved
license-file: license
stability: Experimental
synopsis: Project Synopsis Here
description: Project Description Here
category: Web
author: Author
data-dir: ""
 

 

 
executable bustedParrot
    build-depends: base -any
                 , lens >=3.7.6
                 , bytestring -any 
                 , heist >=0.14
                 , MonadCatchIO-transformers -any
                 , mtl -any
                 , snap -any
                 , snap-core -any
                 , snap-server -any
                 , snap-loader-static -any
                 , text -any
                 , time -any
                 , transformers -any
                 , xmlhtml -any
                 , directory -any
                 , filepath -any
                 , aeson -any
                 , JuicyPixels -any
                 , containers -any
                 , parsec -any
                 , deepseq -any
              --   , dataenc -any
    
         

    buildable: True
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans 
-----  -prof -fprof-auto
 
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src src/handlers
    other-modules: Archive Dipper Dipper_common Dipper_entry_splices
                   InsertLinks Main_page Main_page_common Nodes NodesM Page
                   Page_common Post Site_state
    ghc-options: -fwarn-unused-imports
    
 
