name: databaseHandling
version: 0.1
cabal-version: 1.2
build-type: Simple
license: AllRightsReserved
license-file: license
stability: Experimental
synopsis: Project Synopsis Here
description: Project Description Here
category: Web
author: Author
data-dir: ""
 

 

 
executable databaseHandling
    build-depends: base -any
                -- , text -any
                -- , aeson -any
                 , bustedParrot -any
         

    buildable: True
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans 
-----  -prof -fprof-auto
 
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    ghc-options: -fwarn-unused-imports
    
 
