name: replaceLinksAccordingToMap
version: 0.1
cabal-version: 1.2
build-type: Simple
license: AllRightsReserved
license-file: license
stability: Experimental
synopsis: Project Synopsis Here
description: Project Description Here
category: Web
author: Author
data-dir: ""
 

 

 
executable replaceLinksAccordingToMap
    build-depends: base -any
                 , bytestring -any 
                 , text -any
              --   , deepseq -any
                 , xmlhtml -any
                 , containers -any
                 , blaze-html -any
                 , blaze-markup -any
                 , blaze-builder -any
    
         

    buildable: True
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans 
-----  -prof -fprof-auto
 
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    ghc-options: -fwarn-unused-imports
    
 
